Cleanup of lint warnings which require only a minor change.